# nearcon-website

./: package-lock.json  package.json  render.yaml
Terms/: Terms.Content.Section1.jsx  Terms.Content.Section11.jsx  Terms.Content.Section2.jsx  Terms.Content.Section3.jsx  Terms.Page.jsx
Ticket/: Ticket.Detail.jsx  Ticket.Header.jsx  Ticket.Page.jsx  Ticket.QRCode.jsx
api/: Cargo.toml  docker-compose.yaml
api/migrations/: 20230711105221_users.down.sql  20230711105221_users.up.sql  20230807104043_auth.down.sql  20230807104043_auth.up.sql  20230818075724_user_updates.down.sql  20230818075724_user_updates.up.sql  20230818080118_private_key.down.sql  20230818080118_private_key.up.sql
api/src/: auth.rs  lib.rs  main.rs
src/: Footer.jsx  Index.jsx  Navbar.jsx  Sidebar.jsx
src/Hackathon/: Button.jsx  Experience.jsx  Header.jsx  More.jsx  Page.jsx  SubHeader.jsx
src/Home/: BlackButton.jsx  Experience.jsx  Header.jsx  More.jsx  Page.jsx  SpeakerButton.jsx  SpeakerCard.jsx  Speakers.jsx  Sponsors.jsx  SubHeader.jsx  TelegramButton.jsx  TrackCard.jsx  Tracks.jsx  Venue.jsx
src/Inputs/: AccountId.jsx  Countries.jsx  RadioGroup.jsx
src/Register/: Button.jsx  Content.jsx  Explainer.jsx  Form.jsx  Header.jsx  KeypomLogo.jsx  MintbaseLogo.jsx  Page.jsx  VerikenLogo.jsx
src/Speakers/: Header.jsx  More.jsx  Page.jsx  SpeakerButton.jsx  SpeakerCard.jsx  Speakers.jsx
src/Terms/: Page.jsx  Terms.Content.Section1.jsx  Terms.Content.Section11.jsx  Terms.Content.Section3.jsx  Terms.Header.jsx
src/Ticket/: Content.jsx  Detail.jsx  Page.jsx  QRCode.jsx
(+1 files in other folders)
